# toycore

./: .gitignore  Readme.md  pyproject.toml  setup.py
tests/: test_sim_0.py
tests/dsl/: test_0.py  test_1.py  test_2.py
tests/hdl/counter_4bit/: build.sh  design.v  synthesize.ys  test.py
toycore/: core.py  dsl.py  utils.py
